--- a/covid19/package.json
+++ b/covid19/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.7.8",
+    "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vuex": "^3.4.0"
