--- a/covid19/package.json
+++ b/covid19/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-country-flag": "^2.3.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
